<resources>

    <string name="app_name">Inventory</string>

    <string name="new_book">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier Phone Number</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="error_saving">Error saving book</string>
    <string name="book_saved">Book saved successfully</string>
    <string name="delete_books">Delete All Books</string>

    <string name="empty_view_title_text">Not much going</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>


    <string name="editor_insert_book_failed">Error saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="check_details">Check input details?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="hint_book_title">Title</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="hint_supplier_phone">Supplier phone</string>

    <string name="buy">Buy</string>
    <string name="insert_quantity">Insert quantity</string>
    <string name="increment_book">+</string>
    <string name="decrement_book">-</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="product_detail">Product Detail</string>

    <string name="pick_quantity">Pick Quantity</string>
    <string name="add_quantity">+</string>
    <string name="decrease_quantity">-</string>

</resources>
