<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/product_name"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <TextView
        android:id="@+id/price"
        android:hint="@string/price"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <TextView
        android:id="@+id/quantity"
        android:hint="@string/quantity"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <TextView
        android:id="@+id/supplier_name"
        android:hint="@string/supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <TextView
        android:id="@+id/supplier_phone"
        android:hint="@string/supplier_phone"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <Button
        android:id="@+id/increment_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment_book"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:id="@+id/decrement_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement_book"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_supplier"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

</LinearLayout>