<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/product_name"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <EditText
        android:id="@+id/price"
        android:hint="@string/price"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <EditText
        android:id="@+id/quantity"
        android:hint="@string/quantity"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <EditText
        android:id="@+id/supplier_name"
        android:hint="@string/supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

    <EditText
        android:id="@+id/supplier_phone"
        android:hint="@string/supplier_phone"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>

</LinearLayout>